--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "inquirer": "^9.2.12",
     "jest": "^29.7.0"
